force-app/main/default/objects/WhatsApp_Message_Status__c/WhatsApp_Message_Status__c.object-meta.xml
<CustomObject>
    <label>WhatsApp Message Status</label>
    <nameField>
        <displayFormat>WMS-{00000}</displayFormat>
        <label>WhatsApp Message Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WhatsApp Message Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>