force-app/main/default/objects/WhatsApp_Message_Status__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>WhatsApp Message Statuses</relationshipLabel>
    <relationshipName>WhatsApp_Message_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>