force-app/main/default/objects/WhatsApp_Message_Status__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>WhatsApp Message Statuses</relationshipLabel>
    <relationshipName>WhatsApp_Message_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>