force-app/main/default/objects/WhatsApp_Message_Status__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>WhatsApp Message Statuses</relationshipLabel>
    <relationshipName>WhatsApp_Message_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>