force-app/main/default/objects/WhatsApp_Message_Status__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Mobile_Number__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Template__c</columns>
    <columns>Status__c</columns>
    <columns>Error_Reason__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>